--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    <div id="root"></div>
-    <div id="modal-root"></div>
+    <div id='root'></div>
+    <div id='modal-root'></div>
+    <div id='preloader'></div>
 </body>
 
 </html>
